Fix PDF overlapping and scrolling issues

--- a/src/app.css
+++ b/src/app.css
@@ -2,6 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+@media print {
+  body {
+    -webkit-print-color-adjust: exact;
+    print-color-adjust: exact;
+  }
+
+  #resume-preview-container {
+    max-height: none;
+    overflow: visible;
+  }
+}
+
 .no-border-width {
     border-width: 0 !important;
 }
